:art: fixed alignment

--- a/react/zentunez/src/App.css
+++ b/react/zentunez/src/App.css
@@ -3,16 +3,9 @@
   padding: 5px;
 }
 .player-col {
-  position: absolute;  
-  left: 510px;
-  width: 500px;
+  display: inline-block;  
+  vertical-align: top;
+  width: 30%;
   height: auto;
-}
-
-.library-col {
-  position: absolute;
-  top: 0;
-  left: 0px;
-  width: 500px;
-  height: auto;
+  top: 0px;
 }
